[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Resources/textures/backgrounds/stage1sky.png" type="Texture" id=2]
[ext_resource path="res://Resources/fonts/poco/Poco.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://MainMenu/JoinScreen.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1020, 1280 )

[sub_resource type="DynamicFont" id=2]
size = 47
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1020, 1280 )

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_bottom = 16
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 27
extra_spacing_bottom = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 41
extra_spacing_top = -16
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 40
extra_spacing_bottom = 9
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="MainCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="background" type="PanelContainer" parent="."]
show_behind_parent = true
margin_right = 800.0
margin_bottom = 1024.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="Label" parent="background"]
margin_top = 483.0
margin_right = 800.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = "Loading..."
align = 1

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="PanelContainer" parent="MainMenu"]
show_behind_parent = true
margin_right = 800.0
margin_bottom = 1024.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostLobby" type="Control" parent="MainMenu"]
visible = false
margin_right = 800.0
margin_bottom = 1024.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoloButton" type="Button" parent="MainMenu/HostLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -32.0
margin_right = 150.0
margin_bottom = 32.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostGameButton" type="Button" parent="MainMenu/HostLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = 96.0
margin_right = 150.0
margin_bottom = 166.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MainMenu/HostLobby"]
anchor_left = 0.5
anchor_top = 0.961
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -160.064
margin_right = 33.0
margin_bottom = -149.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinScreen" type="Control" parent="MainMenu"]
visible = false
margin_right = 800.0
margin_bottom = 1024.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinGameButton" type="Button" parent="MainMenu/JoinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 112.0
margin_right = 160.0
margin_bottom = 182.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Enter Server Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPInput" type="LineEdit" parent="MainMenu/JoinScreen"]
margin_left = 152.0
margin_top = 315.0
margin_right = 648.0
margin_bottom = 376.0
grow_vertical = 0
custom_fonts/font = SubResource( 5 )
align = 1
placeholder_text = "IP Address..."
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortInput" type="LineEdit" parent="MainMenu/JoinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -56.0
margin_right = 131.0
margin_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 5 )
align = 1
placeholder_text = "Port..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MainMenu/JoinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 280.0
margin_right = 33.0
margin_bottom = 331.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Control" parent="MainMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="MainMenu/TitleScreen"]
margin_left = 56.0
margin_top = 512.0
margin_right = 368.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 7 )
text = "Host/Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="MainMenu/TitleScreen"]
margin_left = 440.0
margin_top = 512.0
margin_right = 752.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 7 )
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderBoardButton" type="Button" parent="MainMenu/TitleScreen"]
margin_left = 272.0
margin_top = 624.0
margin_right = 532.0
margin_bottom = 694.0
custom_fonts/font = SubResource( 7 )
text = "Leaderboards"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="host" from="MainMenu" to="." method="_on_MainMenu_host"]
[connection signal="join" from="MainMenu" to="." method="_on_MainMenu_join"]
[connection signal="start_singleplayer" from="MainMenu" to="." method="_on_MainMenu_start_singleplayer"]
[connection signal="pressed" from="MainMenu/HostLobby/SoloButton" to="MainMenu" method="_on_SoloButton_pressed"]
[connection signal="pressed" from="MainMenu/HostLobby/HostGameButton" to="MainMenu" method="_on_HostGameButton_pressed"]
[connection signal="pressed" from="MainMenu/HostLobby/BackButton" to="MainMenu" method="_on_BackButton_pressed"]
[connection signal="netInfoFilled" from="MainMenu/JoinScreen" to="MainMenu" method="_on_JoinScreen_netInfoFilled"]
[connection signal="pressed" from="MainMenu/JoinScreen/JoinGameButton" to="MainMenu" method="_on_JoinGameButton_pressed"]
[connection signal="text_entered" from="MainMenu/JoinScreen/IPInput" to="MainMenu/JoinScreen" method="_on_IPInput_text_entered"]
[connection signal="text_entered" from="MainMenu/JoinScreen/PortInput" to="MainMenu/JoinScreen" method="_on_PortInput_text_entered"]
[connection signal="pressed" from="MainMenu/JoinScreen/BackButton" to="MainMenu" method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainMenu/JoinScreen/BackButton" to="MainMenu/JoinScreen" method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainMenu/TitleScreen/HostButton" to="MainMenu" method="_on_HostButton_pressed"]
[connection signal="pressed" from="MainMenu/TitleScreen/JoinButton" to="MainMenu" method="_on_JoinButton_pressed"]
