[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Main.gd" type="Script" id=2]
[ext_resource path="res://World/MainHUD.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MainHUD" parent="." instance=ExtResource( 3 )]

[connection signal="start_game" from="Player" to="." method="_on_Player_start_game"]
[connection signal="update_highscore" from="Player" to="." method="_on_Player_update_highscore"]
[connection signal="start_game" from="MainHUD" to="Player" method="_on_MainHUD_start_game"]
[connection signal="start_game" from="MainHUD" to="." method="_on_MainHUD_start_game"]
